--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 
 //indicate haw huge is google has links for the website
 site:|$|
+site:*.|$| -www
+site:*.*.|$| -www
+site:*.*.*.|$| -www
 
 // Back link
 link:X -site:|$|
