--- a/index.html
+++ b/index.html
@@ -193,6 +193,26 @@ site:|$| intitle:index.of
 
 (site:|$| inurl:s3)
 
+# search some how leaked data here
+#===============================
+site:trello.com "company name"
+site:scribd.com "|$|"
+site:npmjs.com "|$|"
+site:npm.runkit.com "|$|"
+site:libraries.io "|$|"
+site:coggle.it "|$|"
+site:papaly.com "|$|"
+site:prezi.com "|$|"
+site:jsdelivr.net "|$|"
+site:codepen.io "|$|"
+site:pastebin.com "|$|"
+site:repl.it "|$|"
+site:gitter.im "|$|"
+site:bitbucket.org "|$|"
+site:*.atlassian.net "|$|"
+Inurl:gitlab "|$|"
+
+
 
 # Some resources for specific research / exploits / systems
 https://cxsecurity.com/dorks/
