--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@ company name:
 ===========files and directories========
 ========================================
 //manually
-site:codepad.co "||$||"
-site:scribd.com "||$||"
-site:npmjs.com "||$||"
-site:npm.runkit.com "||$||"
-site:libraries.io "||$||"
-site:coggle.it "||$||"
-site:papaly.com "||$||"
-site:trello.com "||$||"
-site:prezi.com "||$||"
-site:jsdelivr.net "||$||"
-site:codepen.io "||$||"
-site:pastebin.com "||$||"
-site:repl.it "||$||"
-site:gitter.im "||$||"
-site:bitbucket.org "||$||"
-site:*.atlassian.net "||$||"
-Inurl:gitlab "||$||"
+site:codepad.co "||z||"
+site:scribd.com "||z||"
+site:npmjs.com "||z||"
+site:npm.runkit.com "||z||"
+site:libraries.io "||z||"
+site:coggle.it "||z||"
+site:papaly.com "||z||"
+site:trello.com "||z||"
+site:prezi.com "||z||"
+site:jsdelivr.net "||z||"
+site:codepen.io "||z||"
+site:pastebin.com "||z||"
+site:repl.it "||z||"
+site:gitter.im "||z||"
+site:bitbucket.org "||z||"
+site:*.atlassian.net "||z||"
+Inurl:gitlab "||z||"
 
 
 
@@ -344,7 +344,7 @@ function append() {
 
 function append2() {
 	var input_value = document.getElementsByTagName('input')[0].value
-	var final  = content.split("||$||").join(input_value);
+	var final  = content.split("||z||").join(input_value);
 	my_new.innerHTML= final
 }
 </script>
