--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 	}
 </style>
 
+#solve later bug
+after use 1 input
+refresh and use second one
+	
 domain:
 <input type="" onkeyup="append()" size="55" name="" />
 <br>
